# alto_desempenho_prova1

./: .gitignore  .in  CMakeLists.txt  main.c  paralelo  serial  serial.c  studentspar_mpi.c  studentsseq.c
serial.dSYM/Contents/Resources/DWARF/: serial
